Bug 450430 - The virtual keyboard not usable after updating from 5.23.5 to 5.24.0
Summary: The virtual keyboard not usable after updating from 5.23.5 to 5.24.0
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: virtual-keyboard (other bugs)
Version First Reported In: 5.24.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression, wayland-only
Depends on:
Blocks:
 
Reported: 2022-02-17 08:04 UTC by Fushan Wen
Modified: 2022-02-17 18:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-02-17 08:04:09 UTC
SUMMARY
In ~/.config/kwinrc, after updating to Plasma 5.24.0, the virtual keyboard is not usable by default because "InputMethod" becomes "InputMethod[$e]". Removing "[$e]" makes the virtual keyboard work again.

STEPS TO REPRODUCE
1. Updating Plasma from 5.23.5 to 5.24.0
2. Reboot into the new desktop
3. Touch any text input

OBSERVED RESULT
No virtual keyboard, and "InputMethod" becomes "InputMethod[$e]"

EXPECTED RESULT
Virtual keyboard

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Wayland
Comment 1 Patrick Silva 2022-02-17 10:25:21 UTC
duplicate of bug 449888?
Comment 2 Fushan Wen 2022-02-17 11:49:03 UTC
(In reply to Patrick Silva from comment #1)
> duplicate of bug 449888?

The commit doesn't seem related to this bug.
Comment 3 Nicolas Fella 2022-02-17 11:53:42 UTC
How sure are you the [$e] is actually related? It shouldn't make a difference: https://invent.kde.org/frameworks/kconfig/-/blob/master/docs/options.md#shell-expansion
Comment 4 Fushan Wen 2022-02-17 13:26:38 UTC
(In reply to Nicolas Fella from comment #3)
> How sure are you the [$e] is actually related? It shouldn't make a
> difference:
> https://invent.kde.org/frameworks/kconfig/-/blob/master/docs/options.
> md#shell-expansion

I added [$e] back to the config and the virtual keyboard still works. So the problem must exist elsewhere.
Comment 5 Bug Janitor Service 2022-02-17 15:37:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2037
Comment 6 Aleix Pol 2022-02-17 18:42:54 UTC
Git commit b1c1603c8cbe37430a214b57d6bdd1be13c4eef1 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 17/02/2022 at 15:53.
Pushed by ngraham into branch 'master'.

inputmethod: Fix read setting

It's specified as a Path in the kcfg file and the KCM will replace the
/home path into $HOME, and I imagine it may do some others likethat.

M  +1    -1    src/main_wayland.cpp

https://invent.kde.org/plasma/kwin/commit/b1c1603c8cbe37430a214b57d6bdd1be13c4eef1
Comment 7 Nate Graham 2022-02-17 18:43:30 UTC
Git commit c7988e8c8335bd3ee922b77eb9f53c8274310ce2 by Nate Graham, on behalf of Aleix Pol.
Committed on 17/02/2022 at 18:43.
Pushed by ngraham into branch 'Plasma/5.24'.

inputmethod: Fix read setting

It's specified as a Path in the kcfg file and the KCM will replace the
/home path into $HOME, and I imagine it may do some others likethat.


(cherry picked from commit b1c1603c8cbe37430a214b57d6bdd1be13c4eef1)

M  +1    -1    src/main_wayland.cpp

https://invent.kde.org/plasma/kwin/commit/c7988e8c8335bd3ee922b77eb9f53c8274310ce2